test/Sema/issue-74858.code
// RUN: %target-typecheck-verify-language

typealias Alias<T> = Int

fn invalidSpecializeExpr(_ x: Alias<Int>.Type) {
  immutable y = x<Int>.this
  // expected-error@-1 {{type of expression is ambiguous without a type annotation}}
  // FIXME: Bad diagnostic
}
